2008-10-26  Stefan Monnier  <monnier@iro.umontreal.ca>

	* faces.el (face-font-family-alternatives): Add "CMU Typewriter Text"
	to the courier family.
	* textmodes/tex-mode.el (tex-verbatim): Don't use "monospace" which is
	usually not serif'd and hence rather unlike verbatim's printed output.

2008-10-25  Chong Yidong  <cyd@stupidchicken.com>

	* vc-cvs.el (vc-cvs-status-extra-headers): Use full directory name
	when reporting the module.

	* vc-dir.el (vc-dir-mode-map): Add follow-link behavior.

	* wid-edit.el (widget-color-complete): Sort completions alphabetically.

2008-10-25  Stefan Monnier  <monnier@iro.umontreal.ca>

	* files.el (locate-dominating-stop-dir-regexp): New var.
	(locate-dominating-file): Change arg from a regexp to a file name.
	Rewrite using the vc-find-root code to avoid directory-files which is
	too slow.  Obey locate-dominating-stop-dir-regexp.
	Don't pay attention to changes in owner.
	(project-find-settings-file): Adjust call to locate-dominating-file.

	* progmodes/flymake.el (flymake-find-buildfile):
	Adjust call to locate-dominating-file.

	* vc-hooks.el (vc-find-root): Use locate-dominating-file.
	(vc-ignore-dir-regexp): Use locate-dominating-stop-dir-regexp.

2008-10-25  Martin Rudalics  <rudalics@gmx.at>

	* subr.el (with-current-buffer): Rename buffer argument to
	buffer-or-name.
	* window.el (get-buffer-window-list): Rename buffer argument to
	buffer-or-name and make it optional.

2008-10-25  Juanma Barranquero  <lekktu@gmail.com>

	* completion.el (add-completion-to-head, add-completion): Doc fixes.
	(completion-search-next, add-completions-from-file):
	Fix typos in docstrings.

	* filesets.el (filesets-menu-ensure-use-cached)
	(filesets-ingroup-patterns, filesets-filetype-property):
	* tutorial.el (get-lang-string):
	* play/gamegrid.el (gamegrid-score-file-length, gamegrid-add-score):
	Fix typos in docstrings.

	* image-dired.el (image-dired-dired-after-readin-hook): Doc fix.
	(image-dired-line-up-method, image-dired-thumb-size)